[project]
name = "cntop"
version = "0.1.0"
description = "A top-like tool to show Ceph network information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "textual>=2.1.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
python-preference = "system"
